--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -22,7 +22,7 @@
 
         <ul class="nav navbar-nav mr-auto navbar-collapse">
             <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
+                <a class="nav-link" href="https://github.com/login/oauth/authorize?client_id=Iv1.6525d5de46b824ef&redirect_uri=http://localhost:8887/callback&scope=user&state=1">Login</a>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
